compiler/test/fail_compilation/imports/imp23177.c
// https://github.com/dlang/dmd/issues/23177

typedef int(*fp)();

int run(fp fn)
{
    return fn();
}
